[gd_scene load_steps=4 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://arial.tres" type="DynamicFont" id=2]
[ext_resource path="res://Config.tscn" type="PackedScene" id=3]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
font = ExtResource( 2 )

[node name="AxisTimer" type="Timer" parent="."]

[node name="Config" parent="." instance=ExtResource( 3 )]
margin_left = 2.80493
margin_top = -1.17673
margin_right = -2041.2
margin_bottom = -918.177
rect_scale = Vector2( 3, 3 )

[connection signal="timeout" from="AxisTimer" to="." method="send_axis"]
[connection signal="config_applied" from="Config" to="." method="apply_config"]
